--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@
 
 :root {
   --light-cyan: rgb(203, 234, 237);
-  --very-light-cyan: rgb(244, 250, 250);
+  --very-light-cyan: rgb(240, 255, 255);
+  --very-dark-cyan: rgb(0, 73, 77);
+  --dark-grayish-cyan: rgb(94, 122, 125);
+  --grayish-cyan: rgb(127, 156, 159);
+  --light-grayish-cyan: rgb(221, 244, 247);
+  --cyan: rgb(88, 227, 195);
 }
 
 main {
@@ -29,24 +34,67 @@ main {
 h1 {
   font-size: 24px;
   letter-spacing: 5px;
-  font-weight: 200;
+  color: var(--dark-grayish-cyan);
 }
 
 section {
   display: flex;
   flex-direction: row;
   background-color: var(--very-light-cyan);
-  width: 75%;
+  width: 1000px;
 }
 
 .column-left {
   display: flex;
   flex-direction: column;
   width: 50%;
+  margin: 25px;
+  border-radius: 10px;
+}
+
+#bill-amount {
+  background-color: var(--light-grayish-cyan);
+  border: none;
+  border-radius: 5px;
+  height: 40px;
+}
+
+#number-of-people {
+  background-color: var(--light-grayish-cyan);
+  border: none;
+  border-radius: 5px;
+  height: 40px;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  width: 100px;
+  background-color: var(--very-dark-cyan);
+  height: 40px;
+  margin: 10px;
+  color: var(--light-cyan);
+}
+
+li:hover {
+  background-color: var(--cyan);
+  color: var(--very-darkcyan);
+  cursor: pointer;
 }
 
 .column-right {
   display: flex;
   flex-direction: column;
   width: 50%;
+  margin: 25px;
+  background-color: var(--very-dark-cyan);
+  border-radius: 10px;
 }
