--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,17 @@ section {
   display: flex;
   flex-direction: row;
   background-color: var(--very-light-cyan);
-  width: 1000px;
+  width: 900px;
+  height: 400px;
+  border-radius: 25px;
+  margin: 50px;
 }
 
 .column-left {
   display: flex;
   flex-direction: column;
   width: 50%;
-  margin: 25px;
+  margin: 35px;
   border-radius: 10px;
 }
 
@@ -57,6 +60,9 @@ section {
   border: none;
   border-radius: 5px;
   height: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 #number-of-people {
@@ -64,17 +70,21 @@ section {
   border: none;
   border-radius: 5px;
   height: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 li {
   display: flex;
   align-items: center;
+  justify-content: center;
   justify-content: center;
   list-style: none;
   width: 100px;
@@ -82,6 +92,7 @@ li {
   height: 40px;
   margin: 10px;
   color: var(--light-cyan);
+  border-radius: 5px;
 }
 
 li:hover {
@@ -93,8 +104,41 @@ li:hover {
 .column-right {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 50%;
-  margin: 25px;
+  margin: 35px;
   background-color: var(--very-dark-cyan);
   border-radius: 10px;
+}
+
+.tip {
+  display: flex;
+  width: 100%;
+  color: var(--light-grayish-cyan);
+  margin: 25px;
+}
+
+.total {
+  display: flex;
+  width: 100%;
+  color: var(--light-grayish-cyan);
+  margin: 25px;
+}
+
+button {
+  position: relative;
+  justify-content: flex-end;
+  background-color: var(--cyan);
+  width: 325px;
+  height: 40px;
+  bottom: 0px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 50px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: var(--very-light-cyan);
 }
