--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ section {
 .column-left {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 50%;
   margin: 35px;
   margin-right: 20px;
@@ -57,8 +58,9 @@ section {
 }
 
 .column-left p {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   color: var(--dark-grayish-cyan);
+  margin-bottom: -25px;
 }
 
 input[type="number"] {
@@ -66,8 +68,8 @@ input[type="number"] {
   border: none;
   border-radius: 5px;
   height: 40px;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  /* margin-top: 5px; */
+  /* margin-bottom: 10px; */
   padding: 10px;
   text-align: right;
   font-size: 20px;
@@ -110,7 +112,7 @@ input[type="number"]::-webkit-outer-spin-button {
   color: var(--very-light-cyan);
   border-radius: 5px;
   margin-bottom: 10px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   border: none;
   font-size: 20px;
 }
