--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* width: 500px; */
   align-items: center;
+  margin-bottom: -15px;
 }
 
 .tip-percentage {
@@ -112,7 +112,6 @@ input[type="number"]::-webkit-outer-spin-button {
   color: var(--very-light-cyan);
   border-radius: 5px;
   margin-bottom: 10px;
-  /* margin-top: 10px; */
   border: none;
   font-size: 20px;
 }
